# PDF-Tools

./: .gitattributes  .gitignore  .gitignore (1)  DOCKER_GUIDE.md  Dockerfile.frontend  README.md  app_paths.py  build (1).bat  build.bat  build_exe_docker.bat  chapter_weight_analyzer.py  direct_study_plan_calculator.py  docker-compose.yml  enhanced_reading_statistics.py  frontend_build_log.txt  home_page_widget.py  index (1).html  index.html  navigation_manager.py  package (1).json  package-lock.json  package.json  pdf_comments.py  pdf_reading_progress_tab.py  pdf_tools_comprehensive.py  playwright.config.ts  reading_position_db.py  reading_speed_tab.py  recent_books_manager.py  recent_books_tab.py  requirements.txt  run_desktop_docker.bat  run_web_docker.bat  split_pdf_tab.py  statistics_dashboard_tab.py  study_plan_calculator.py  tailwind (1).config.js  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  (+6 more)
backend/: main.py  pdf_service.py
e2e/: critical_flows.spec.ts
files/: PdfConverter.jsx  converter.py  converter.rs  main_excerpt.rs  requirements.txt  server.py
frontend/: package-lock.json
playwright-report/: index.html
python-server/: Dockerfile  Dockerfile.build  app_data.db  build_exe (1).py  build_exe.py  pdf_service.py  requirements (1).txt  requirements.txt  server (1).py  server.py  test_coords.py
src/: App (1).tsx  App.tsx  index (1).css  (+3 more)
src-tauri/: 2  Cargo.toml  app_data.db  app_data.db-journal  build_log.txt  build_output.txt  out.txt  tauri (1).conf.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
(+129 files in other folders)
